--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
         "phpstan/phpdoc-parser": "^2.0",
         "symfony/asset": "6.4.*",
         "symfony/console": "6.4.*",
+        "symfony/dom-crawler": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "6.4.*",
         "symfony/property-access": "6.4.*",
         "symfony/property-info": "6.4.*",
         "symfony/runtime": "6.4.*",
